# MusicMP3-Downloader

./: .gitignore  LICENSE  MODEL.md  MODELO.md  README.md  auto_train_model.py  bulk_train.py  check_model.html  download_and_train.py  export_model.sh  import_model.sh  pom.xml  profile.json  pyproject.toml  requirements.txt  setup_model.sh  train_20_more.py  train_with_real_audio.py
musicmp3/: cli.py  converter.py  downloader.py  gui.py  midi_to_nbs.py  nbs.py  nbs_analyzer.py  nbs_optimizer.py  nbs_playback.py  nbs_visualizer.py  sample_loader.py  separator.py  server.py  transcriber.py
musicmp3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
musicmp3/static/: api.js  app.js  app.js.backup  canvas.js  index.html  style.css  test.html
nbs_songs/: BirdBrain_-_Kasane_Teto_bass.mid  BirdBrain_-_Kasane_Teto_drums.mid  BirdBrain_-_Kasane_Teto_other.mid  BirdBrain_-_Kasane_Teto_vocals.mid
src/main/java/org/Chagui68/: Main.java
