[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musicmp3"
version = "2.0.0"
description = "Convert any song to Minecraft Note Block Studio (.nbs) format"
requires-python = ">=3.10"
dependencies = [
    "mido",
    "soundfile",
]

[project.optional-dependencies]
full = [
    "gradio",
    "demucs",
    "torch",
    "basic-pitch",
]

[project.scripts]
musicmp3 = "musicmp3.cli:main"
musicmp3-gui = "musicmp3.gui:main"

[tool.setuptools.packages.find]
include = ["musicmp3*"]
